# simple_alarm_clock

./: .eslintignore  .prettierignore  Cargo.toml  LICENSE  README.md  index.html  lib.js  main.js  package.json  pnpm-lock.yaml  tauri.conf.json
src/: cmds.rs  event.rs  job.rs  main.rs  menu.rs  tray.rs
ui/: lib.js  main.js  style.css  util.js
